--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,13 +10,26 @@
   "dependencies": {
     "@ag-ui/core": "^0.0.37",
     "@ag-ui/encoder": "^0.0.37",
+    "@aws-sdk/client-s3": "^3.887.0",
     "@keystone-6/auth": "^8.1.0",
     "@keystone-6/core": "^6.5.1",
     "@keystone-6/fields-document": "^9.1.1",
     "@prisma/client": "5.22.0",
-    "openai": "^5.19.1"
+    "axios": "^1.12.0",
+    "body-parser": "^2.2.0",
+    "dayjs": "^1.11.18",
+    "express": "^4.21.2",
+    "fastmcp": "^3.16.0",
+    "http-proxy-middleware": "^3.0.5",
+    "openai": "^5.19.1",
+    "winston": "^3.17.0",
+    "ws": "^8.18.3",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^4",
+    "@types/ws": "^8.18.1",
     "prisma": "5.22.0"
   }
 }
