--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.12.0",
     "body-parser": "^2.2.0",
     "dayjs": "^1.11.18",
+    "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "fastmcp": "^3.16.0",
     "http-proxy-middleware": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "openai": "^5.19.1",
     "winston": "^3.17.0",
     "ws": "^8.18.3",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/express": "^4",
+    "@types/lodash-es": "^4.17.12",
     "@types/ws": "^8.18.1",
     "prisma": "5.22.0"
   }
