--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "server",
+  "name": "agent-server",
   "version": "1.0.3",
   "private": true,
   "scripts": {
-    "dev": "keystone dev",
-    "start": "keystone start",
-    "build": "keystone build",
+    "dev": "keystone dev --no-db-push",
+    "start": "keystone start --with-migrations",
+    "build": "keystone build --no-prisma",
     "db:migrate": "keystone prisma migrate dev",
-    "db:deploy": "keystone prisma migrate deploy"
+    "db:deploy": "keystone prisma migrate deploy",
+    "deploy": "npm run build && npm run db:deploy",
+    "postinstall": "keystone build --no-ui --frozen --no-prisma"
   },
   "dependencies": {
     "@ag-ui/core": "^0.0.37",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@ant-design/cssinjs": "^1.24.0",
+    "@ant-design/icons": "^6.0.2",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^4",
