--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -2,11 +2,11 @@ name: Build Server Package
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'packages/server/**'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'packages/server/**'
 
