--- a/Dockerfiles/Dockerfile.server
+++ b/Dockerfiles/Dockerfile.server
@@ -1,20 +1,16 @@
 ARG BASEIMAGE=node:22-alpine
 
 FROM ${BASEIMAGE} as builder
-ENV ALARM_CHANNEL_CONFIG=1,2
+ENV ALARM_CHANNAL_CONFIG=1,2
 
 WORKDIR /app
-
-# Copy package files first for better layer caching
-COPY package.json pnpm-lock.yaml ./
-COPY packages/server/package.json packages/server/pnpm-lock.yaml ./packages/server/
-
-# Install pnpm and dependencies
-RUN npm install -g pnpm && \
-    pnpm install --frozen-lockfile
-
-# Copy source code
 COPY . .
+
+# Install pnpm
+RUN npm install -g pnpm
+
+# Install dependencies
+RUN pnpm install --frozen-lockfile
 
 # Build the application
 RUN pnpm run build
@@ -23,14 +19,13 @@ RUN pnpm run build
 FROM ${BASEIMAGE}
 WORKDIR /app
 
-# Install pnpm globally
-RUN npm install -g pnpm
-
-# Copy built files from builder
+# Copy built files and dependencies
 COPY --from=builder /app/.keystone ./.keystone
-COPY --from=builder /app/packages/server/package.json ./package.json
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/pnpm-lock.yaml ./pnpm-lock.yaml
 
 # Install production dependencies only
+RUN npm install -g pnpm
 RUN pnpm install --prod --frozen-lockfile
 
 EXPOSE 3000
