--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,7 +31,7 @@
     "openai": "^5.19.1",
     "winston": "^3.17.0",
     "ws": "^8.18.3",
-    "zod": "^4.1.8"
+    "zod": "^3"
   },
   "devDependencies": {
     "@ant-design/cssinjs": "^1.24.0",
@@ -53,6 +53,7 @@
     "sass": "^1.92.1",
     "tailwindcss": "^4.1.13",
     "typed-scss-modules": "^8.1.1",
+    "typescript": "^5.9.2",
     "typescript-plugin-css-modules": "^5.2.0"
   }
 }
