--- a/.github/workflows/agent-server.yml
+++ b/.github/workflows/agent-server.yml
@@ -4,9 +4,14 @@ on:
   push:
     tags:
       - '*'
+    paths:
+      - 'packages/server/**'
+      - 'Dockerfile'
   pull_request:
     branches:
       - main
+    paths:
+      - 'packages/server/**'
 
 env:
   registry: ghcr.io
@@ -44,7 +49,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{env.registry}}/${{ env.image_name }}
+          images: ${{ env.registry }}/${{ env.image_name }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -53,7 +58,7 @@ jobs:
           file: ./Dockerfile
           target: agent-server
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
