--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "keystone dev --no-db-push",
-    "build": "keystone build && keystone prisma migrate dev",
+    "build": "keystone build --no-prisma",
     "migrate": "keystone prisma migrate dev",
     "start": "keystone start --with-migrations"
   },
