--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -7,5 +7,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": [".prisma"]
+  "exclude": [
+    ".prisma",
+    "node_modules"
+  ]
 }
