--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "@keystone-6/core": "^6.5.1",
     "@keystone-6/fields-document": "^9.1.1",
     "@keystone-ui/core": "^5.0.2",
+    "@llamaindex/openai": "^0.4.20",
     "@prisma/client": "^6.16.2",
     "axios": "^1.12.0",
     "body-parser": "^2.2.0",
@@ -26,6 +27,7 @@
     "fastmcp": "^3.16.0",
     "graphql": "^16.11.0",
     "http-proxy-middleware": "^3.0.5",
+    "llamaindex": "^0.12.0",
     "lodash-es": "^4.17.21",
     "next": "^14.2.32",
     "openai": "^5.19.1",
