--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,13 +12,21 @@
   "dependencies": {
     "@ag-ui/core": "^0.0.37",
     "@ag-ui/encoder": "^0.0.37",
+    "@ai-sdk/openai-compatible": "^1.0.19",
+    "@ai-sdk/provider": "^2.0.0",
+    "@ai-sdk/provider-utils": "^3.0.10",
     "@aws-sdk/client-s3": "^3.887.0",
     "@keystone-6/auth": "^8.1.0",
     "@keystone-6/core": "^6.5.1",
     "@keystone-6/fields-document": "^9.1.1",
     "@keystone-ui/core": "^5.0.2",
-    "@llamaindex/openai": "^0.4.20",
+    "@langchain/core": "^0.3.77",
+    "@langchain/langgraph": "^0.4.9",
+    "@langchain/mcp-adapters": "^0.6.0",
+    "@langchain/openai": "^0.6.13",
+    "@modelcontextprotocol/sdk": "^1.18.2",
     "@prisma/client": "^6.16.2",
+    "ai": "^5.0.55",
     "axios": "^1.12.0",
     "body-parser": "^2.2.0",
     "dayjs": "^1.11.18",
@@ -27,7 +35,7 @@
     "fastmcp": "^3.16.0",
     "graphql": "^16.11.0",
     "http-proxy-middleware": "^3.0.5",
-    "llamaindex": "^0.12.0",
+    "langchain": "^0.3.34",
     "lodash-es": "^4.17.21",
     "next": "^14.2.32",
     "openai": "^5.19.1",
@@ -42,6 +50,7 @@
     "@types/body-parser": "^1.19.6",
     "@types/express": "^4",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "24.5.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.18.1",
@@ -52,6 +61,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.92.1",
+    "sdk": "link:@types/@modelcontextprotocol/sdk",
     "tailwindcss": "^4.1.13",
     "typed-scss-modules": "^8.1.1",
     "typescript": "^5.9.2",
