--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,6 +37,7 @@
     "http-proxy-middleware": "^3.0.5",
     "langchain": "^0.3.34",
     "lodash-es": "^4.17.21",
+    "mcp-client": "^1.13.1",
     "next": "^14.2.32",
     "openai": "^5.19.1",
     "winston": "^3.17.0",
